# beacon-project

./: .gitignore  FIRST_FLASH.md  PROJECT_STATE.md  README.md  TODO.md  User_Setup.h  decode_beacon.py  demo_multiple_networks.py  mock_wifi_networks.json  rings_preview.py  wifi_metadata_scanner.py  wifi_rings.c  wifi_rings.h  wifi_rings_esp32s3.ino  wifi_rings_per_signal.html  wifi_visualizer.py
docs/: ENCODING.md  PORTFOLIO.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  battery.c  battery.h  camera.c  camera.h  config.h  display.c  display.h  idf_component.yml  image_gen.c  image_gen.h  main.c  sd_save.c  sd_save.h  wifi_scan.c  wifi_scan.h
mock-data/: scan-data_1
tools/: encoding_steps.py  make_sample.py  rings_host.c  rings_preview.py  test_data_roundtrip.py
web/: README.md  decode.js  index.html  package.json  test_decode.js
wifi_rings_esp32s3/: beacon_share.cpp  beacon_share.h  partitions.csv  wifi_data.c  wifi_data.h  wifi_rings.c  wifi_rings.h  wifi_rings_esp32s3.ino
